fix: Debut de resolution des problemes de migration V1